2017-10-27
The project plan has been discussed and updated. The workload has been distributed between the three of us.
/Edvin Jakobsson

2017-10-29
A basic template for the project have been setup together with sketches for basic IO.
/Johan Book

2017-10-31
The classes tpoint and treader have been developped to facilitate IO. treader reads data line for line and returns a tpoint for each line, which contains all data.
/Johan Book

2017-10-32
Customized tpoint and treader to be able to determine format (SMHI or Uppsala) and parse it on its own.
/Johan Book

<<<<<<< HEAD
2017-11-06
The file global_warming.C has been created which contains a function for creating a histogram that shows the average temperature over the years 1722-2013.
/Edvin Jakobsson
=======
2017-11-02
Created branch transparent_graphs where cool_image.C is producing several different graphs which will later will be combined to a single image.
/Johan Book

2017-11-05
Saratrial.cpp added in order to read the data of the file Uppsala.dat into a bidimensional array and then store in two different arrays the number of each year and the highest temperature of each year.
/Sara Gabrielli
>>>>>>> 589fedb75e0b28625111263109c2218808492968

2017-11-07
global.warming.C is almost complete. It works fine and creates the histogram expected. What is left is tidying up the code to make it simpler. Comments are also needed.
/Edvin Jakobsson

2017-11-07
The report has been discussed between the three of us and the workload has been distributed. Another meeting has been set in order to together create slides for the presentation.
/Edvin Jakobsson